Edit layout of ProductAction and ProductDetails component to match wireframe. Edits include bottom fixed pricing/add to card button on mobile and reshaping action buttons to match site style.

--- a/src/page-components/ProductPage/ProductPage.module.css
+++ b/src/page-components/ProductPage/ProductPage.module.css
@@ -7,11 +7,13 @@ h1 {
   grid-template-columns: 1fr;
   column-gap: 1rem;
   align-items: center;
+  margin-bottom: 100px;
 }
 
 .section {
   display: grid;
   grid-template-columns: 1fr;
+  align-items: center;
 }
 
 .details-actions {
@@ -19,6 +21,8 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: auto;
+  max-width: 80%;
 }
 
 @media (min-width: 1024px) {
